getting rid of the stupid

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="specRunner.js"></script>
   
   <!-- include source files here... -->
-  <script type="text/javascript" src="../JHTML.min.js"></script>
+  <script type="text/javascript" src="../jhtml.js"></script>
   
 
   <script type="text/javascript">
